# materialism

./: .isort.cfg  LICENSE  README.md  ROADMAP.md  noxfile.py  pyproject.toml
docs/: conf.py  customisation.rst  getting-started.rst  index.rst  more.rst
docs/demo/: demo.rst  index.rst  long.rst  structure.rst
src/materialism/: __init__.py  base.html  theme.conf
src/materialism/partials/: _head.html  _variables.jinja  announce.html  body-prefix.html  body-suffix.html  content.html  footer.html  header-tabs.html  header.html
src/materialism/scss/: _colors.sass  _content.sass  _footer.sass  _header.sass  _helpers.sass  _layout.sass  _material_colors.scss  _sidebar.sass  _theme_colors.scss  main.sass  main.scss  palette.scss  settings.json
src/materialism/static/scripts/: main.js
src/materialism/static/stylesheets/: main.css  palette.css
