[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "materialism"
author = "Pradyun Gedam"
author-email = "mail@pradyunsg.me"
home-page = "https://github.com/pradyunsg/materialism"
description-file = "README.md"
requires-python = ">=3.5"

[tool.flit.metadata.requires-extra]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
doc = ["sphinx"]

[tool.flit.entrypoints]
"sphinx.html_themes" = {materialism = "materialism"}

[tool.flit.sdist]
exclude = ["src/materialism/scss"]
